--- a/server-dash/package.json
+++ b/server-dash/package.json
@@ -7,6 +7,7 @@
     "assert": "^1.4.1",
     "blessed": "^0.1.81",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "firebase-admin": "^5.11.0",
